--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
     "require": {
-        "slim/slim": "3.*",
         "thingengineer/mysqli-database-class": "dev-master",
-	"mnapoli/php-di": "~3.5"
+        "slim/slim": "4.*",
+	"mnapoli/php-di": "~3.5",
+        "php-di/slim-bridge": "^3.1",
+        "slim/psr7": "^0.6.0"
     }
 }
